Release 205

* [issue #78] do not exit on in failed opens in domserv

--------------------------------------------
Release 204

* syntax error in reldall fixed
* less debugging in reldall

--------------------------------------------
Release 203

* add reldall and reldcwd
* domserv has better support for my dor driver

--------------------------------------------
Release 202

* domterm now handles POLLERR

--------------------------------------------
Release 201

* set rpm build root correctly

--------------------------------------------
Release 200

* use crossover rather than centroid in tcals
* more baseline info in tcals
* mjb scheduling rewritten in C
* ldfb script to load flasherboard code
* slightly faster scripts
* domterm no longer echos on command prompt input
* se takes backslashes in expect string
* support alj dor driver interface
