@@ -1,3 +1,9 @@
+Release 206 [2006-03-24]:
+
+* [issue #121] a better massacre in mjb-run-test
+* [issue #120] fix timeout too short in domstate and configboot scripts
+
+-----------------------------------------------------------------------------
 Release 205
 
 * [issue #78] do not exit on in failed opens in domserv
